// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
.emotion-0 {
  margin: auto;
}

<footer
  class="ant-layout-footer emotion-0 hide-on-print"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</footer>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin: auto;
}

<footer
  class="ant-layout-footer emotion-0 hide-on-print"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</footer>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  margin: auto;
  border: 1px solid blue;
}

<footer
  class="ant-layout-footer emotion-0 hide-on-print"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</footer>
`;

exports[`Render required = true areas.content - value[0] 1`] = `
.emotion-0 {
  margin: auto;
}

<footer
  class="ant-layout-footer emotion-0 hide-on-print"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</footer>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  margin: auto;
}

<footer
  class="ant-layout-footer emotion-0 hide-on-print"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</footer>
`;

exports[`Render required = true properties.style - value[0] 1`] = `
.emotion-0 {
  margin: auto;
  border: 1px solid blue;
}

<footer
  class="ant-layout-footer emotion-0 hide-on-print"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</footer>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
